--- a/requirements.txt
+++ b/requirements.txt
@@ -1946,3 +1946,12 @@ zstandard==0.23.0 \
     --hash=sha256:fd7699e8fd9969f455ef2926221e0233f81a2542921471382e77a9e2f2b57f4b \
     --hash=sha256:fe3b385d996ee0822fd46528d9f0443b880d4d05528fd26a9119a54ec3f91c69
     # via apache-beam
+
+apache-beam~=2.60.0
+numpy~=1.26.4
+pandas~=2.2.3
+Lifetimes~=0.11.3
+setuptools~=75.5.0
+future~=1.0.0
+autograd~=1.7.0
+protobuf~=4.25.5
